--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,17 @@
 	}
 }
 
+@INPROCEEDINGS{shor,
+	author={Shor, P.W.},
+	booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science}, 
+	title={Algorithms for quantum computation: discrete logarithms and factoring}, 
+	year={1994},
+	volume={},
+	number={},
+	pages={124-134},
+	doi={10.1109/SFCS.1994.365700}}
+
+
 @article{gelman1992inference,
 	title={Inference from iterative simulation using multiple sequences},
 	author={Gelman, Andrew and Rubin, Donald B},
