--- a/refs.bib
+++ b/refs.bib
@@ -25,6 +25,18 @@
 	pages={124-134},
 	doi={10.1109/SFCS.1994.365700}}
 
+@article{bennett1997strengths,
+	title={Strengths and weaknesses of quantum computing},
+	author={Bennett, Charles H and Bernstein, Ethan and Brassard, Gilles and Vazirani, Umesh},
+	journal={SIAM journal on Computing},
+	volume={26},
+	number={5},
+	pages={1510--1523},
+	year={1997},
+	publisher={SIAM}
+}
+
+
 
 @article{gelman1992inference,
 	title={Inference from iterative simulation using multiple sequences},
