--- a/main.tex
+++ b/main.tex
@@ -442,44 +442,46 @@ R = \ceil[\Bigg]{\frac{\pi}{4} \sqrt{\frac{N}{M}}}
  
  \subsection{Quantum minimization}
 
- \begin{figure}[!t]
-	\centering
-	\includegraphics[width=0.9\linewidth]{qMinAlg.pdf}
-	\caption{Total number of oracle evaluations required by quantum minimization algorithm \citep{durr1996quantum} for different starting ranks and search set sizes $N$ from 500 independent simulations each.  Less than 1\% of the 12,500 instances failed to recover the true minimum.}\label{fig:qMinAlg}
-\end{figure}
+
 
  \begin{algorithm}[t!]
+ 	\vspace{3em}
+ 	
 	\caption{Quantum minimum searching algorithm \citep{durr1996quantum}}\label{alg:min}
-	\KwData{An unordered database $T[0,\dots,N-1]$ with unique integer elements; a maximum error tolerance $err\in(0,1)$; expected time to success $m_0=\frac{45}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$.}
-	\KwResult{An $n$-bit binary string $x_0$ satisfying $T[x_0] = \min T$ with probability greater than $1-\epsilon$.}
+	\KwData{A quantum sub-routine capable of evaluating a function $f(\cdot)$ over $\{0,\dots,N-1\}$ with with unique integer values; a maximum error tolerance $\epsilon \in(0,1)$; expected total time to success $m_0=\frac{45}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$.}
+	\KwResult{A $\log_2 (N)$-bit binary string $x_0$ satisfying $f(x_0) = \min f$ with probability greater than $1-\epsilon$.}
 	$s \gets 0$\;
 	$x_0 \gets Uniform\{0,\dots,N-1\}$\;
 	\While{$s< m_0/\epsilon$}{
 		Prepare initial state $\frac{1}{\sqrt{N}}\sum_x\ket{x}\ket{x_0}$\;
-		Mark all items $x$ satisfying $T[x]<T[x_0]$\;
+		Mark all items $x$ satisfying $f(x)<f(x_0)$\;
 		$s\gets s+ \log_2(N)$\;
-		Apply quantum exponential searching algorithm (Alg \ref{alg:expoSearch}); \Comment{$I$ timesteps}
+		Apply quantum exponential searching algorithm (Alg \ref{alg:expoSearch}); \Comment{$I$ time steps}
 		$s\gets s+ I$\;
 		Obtain $x'$ by measuring first register\;
-		\If{$T[x']<T[x_0]$}{$x_0 \gets x'$}
+		\If{$f(x')<f(x_0)$}{$x_0 \gets x'$}
 	}
 	\Return{$x_0$} \ .
-		\vspace{0.5em}
-		
+	\vspace{0.5em}
+	
 \end{algorithm}
+		
+
 
 Given a function $f(\cdot)$ that maps the discrete set $\{0,\dots,N-1\}$ to the integers, we wish to find the minimizer
 \begin{align*}
 x_0 = \argmin_{x\in\{0,\dots,N-1\}} f(x) \, .
 \end{align*}
  \citet{durr1996quantum} propose a quantum algorithm for finding $x_0$ that iterates between updating a running minimum $F\in f(\{0,\dots,N-1\})$ and applying the quantum exponential search algorithm (Algorithm \ref{alg:expoSearch}) to find an element $x$ such that $f(x)<F$.  Having run these iterations a set number of times, the algorithm returns the minimizer $x_0$ with high probability. 
- To this end, \citet{durr1996quantum} show that their algorithm takes an expected total time of $m_0=\frac{45}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$ to find the minimizer, where marking items with values less than the threshold value (Algorithm \ref{alg:min}) requires $\log_2(N)$ time steps and each Grover iteration within the quantum exponential search algorithm requires one time step. From there, Markov's inequality says
+ To this end, \citet{durr1996quantum} show that their algorithm takes an expected total time less than or equal to $m_0:=\frac{45}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$ to find the minimizer, where marking items with values less than the threshold value (Algorithm \ref{alg:min}) requires $\log_2(N)$ time steps and each Grover iteration within the quantum exponential search algorithm requires one time step. From there, Markov's inequality says
  \begin{align*}
- \mbox{Pr}\left( \mbox{total time to success} \geq \frac{m_0}{\epsilon}\right) \leq \frac{\mbox{E}\left(\mbox{total time to success}\right)}{m_0/\epsilon}=\epsilon \, ,
+ \mbox{Pr}\left( \mbox{total time to success} \geq \frac{m_0}{\epsilon}\right) \leq \frac{\mbox{E}\left(\mbox{total time to success}\right)}{m_0/\epsilon}\leq \epsilon \, ,
  \end{align*}
- or that we must scale the minimization procedure's time steps by a factor of $1/\epsilon$ to reach a failure rate less than $\epsilon$.
+ or that we must scale the minimization procedure's time steps by a factor of $1/\epsilon$ to reach a failure rate less than $\epsilon$.  Due to the iterative nature of the algorithm, one might suppose that it is beneficial to start at a value $x_0$ for which $f(x_0)$ is lower relative to other values. This turns out to be the case in theory and in practice, and the benefit of warm-starting is particularly useful in the context of parallel MCMC.
 
-\begin{lemma}[Warm-starting]\label{lem:warm}
+
+
+\begin{prop}[Warm-starting]\label{prop:warm}
 	Suppose that the quantum minimization algorithm begins with a threshold $F_0$ such that $f(x)<F_0$ for only $K-1$ items. Then the expected total number of time steps to find the minimizer is bounded above by
 	\begin{align*}
 	m_0^K = \left(\frac{5}{4} - \frac{1}{\sqrt{K-1}} \right) 9\sqrt{N} + \frac{7}{10} \log_2(K) \log_2(N) \, ,
@@ -488,21 +490,30 @@ x_0 = \argmin_{x\in\{0,\dots,N-1\}} f(x) \, .
 	\begin{align*}
 	m_0^K = m_0 - 9\sqrt{\frac{N}{K-1}} + \frac{7}{10} \log_2 \left(\frac{K}{N} \right) \log_2(N)\, .
 	\end{align*} 
-\end{lemma}
+\end{prop}
+
 \begin{proof}
-	The proof follows the exact same form as Lemma 2 of \citet{durr1996quantum}. It relies on a theoretical algorithm called the \emph{infinite algorithm} that runs until the minimum is found.  In this case, Lemma 1 of that paper says that the probability that the $r$th lowest value is ever selected when searching among $K$ items is $p(K,r)=1/r$ for $r\leq K$ and 0 otherwise.  For a warm-start at element $K$, the expected total time spent in the exponential search algorithm is
+	The proof follows the exact same form as Lemma 2 of \citet{durr1996quantum}. It relies on a theoretical algorithm called the \emph{infinite algorithm} that runs until the minimum is found.  In this case, Lemma 1 of that paper says that the probability that the $r$th lowest value is ever selected when searching among $K$ items is $p(K,r)=1/r$ for $r\leq K$ and 0 otherwise.  For a warm start at element $K$, the expected total time spent in the exponential search algorithm is
 	\begin{align*}
 	\sum_{r=2}^N p(K,r) \frac{9}{2} \sqrt{\frac{N}{r-1}} &= \sum_{r=2}^K p(K,r) \frac{9}{2} \sqrt{\frac{N}{r-1}} 
 	=  \frac{9}{2}\sqrt{N}\sum_{r=1}^{K-1} \frac{1}{r+1} \frac{1}{\sqrt{r}} \\
 	&\leq \frac{9}{2}\sqrt{N}\left( \frac{1}{2}+\sum_{r=2}^{K-1} r^{-3/2} \right) \leq \frac{9}{2}\sqrt{N}\left( \frac{1}{2}+\int_{r=1}^{K-1} r^{-3/2} \dd r \right) \\
 	&= \left(\frac{5}{4} - \frac{1}{\sqrt{K-1}} \right) 9\sqrt{N} \, .
 	\end{align*}
-	An upper bound for the expected total number of time steps preparing the initial state and marking items $T[x]<T[x_0]$ follows in a similar manner.
+	An upper bound for the expected total number of time steps preparing the initial state and marking items $f(x)<f(x_0)$ follows in a similar manner.
 \end{proof}
 
-Lemma \ref{lem:warm} shows that, e.g., if Algorithm \ref{alg:min} begins at the item with second lowest value, then the expected total time to success is bounded above by $m_0^2=\frac{9}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$, reducing the generic upper bound by $9\sqrt{N}-\frac{7}{10}\log_2\left( \frac{2}{N}\right)\log_2(N)$ time steps.  When $N$ equals 1000, say, the expected total time steps is $m_0^2< 78.2$.  Keeping $N=1000$ but letting the algorithm begin at the third lowest value ($K=3$), the expected total time steps before success is $m_0^3<165.6$. Raising $N$ to 10,000, the two numbers increase to $m_0^2< 234.4$ and $m_0^3<503.4$. These warm-starting upper bounds on the expected total time needed to obtain the minimum are especially useful in the context of parallel MCMC, when the current state $\ttheta^{(s)}$ inhabits the high-density region of the target distribution but the \emph{vast} majority of proposals do not.  
 
-%Indeed, the empirically optimal rejection rate for, e.g., the simplicial sampler of \citet{holbrook2021generating} reaches a \emph{minimum} of approximately 0.35 in high-dimensions: for roughly a third of the MCMC iterations, the current state 
+
+Proposition \ref{prop:warm} shows that, e.g., if Algorithm \ref{alg:min} begins at the item with second lowest value, then the expected total time to success is bounded above by $m_0^2=\frac{9}{4}\sqrt{N}+\frac{7}{10}\log_2(N)$, reducing the generic upper bound by $9\sqrt{N}-\frac{7}{10}\log_2\left( \frac{2}{N}\right)\log_2(N)$ time steps.  When $N$ equals 1000, say, the expected total time steps is $m_0^2< 78.2$.  Keeping $N=1000$ but letting the algorithm begin at the third lowest value ($K=3$), the expected total time steps before success is $m_0^3<165.6$. Raising $N$ to 10,000, the two numbers increase to $m_0^2< 234.4$ and $m_0^3<503.4$.  
+
+In practice, the number of time steps before finding the minimum is surprisingly small.  Figure \ref{fig:qMinAlg} corroborates the intuition that it is beneficial to start at a lower ranked element. To generate these results, we use an early stopping rule for the quantum minimization algorithm's exponential searching sub-routine, halting it after $\frac{9}{4}\sqrt{N}$ iterations. Even with this stopping rule in place, the error rate of the quantum minimization algorithm is less than $1\%$. We can increase the early stopping threshold to obtain even lower error rates, but this strategy would seem to be unnecessary in the context of parallel MCMC.  The benefits of warm-starting are useful in the same context, when the current state $\ttheta^{(s)}$ usually inhabits the high-density region of the target distribution but the majority of proposals do not.  
+
+ \begin{figure}[!t]
+	\centering
+	\includegraphics[width=0.9\linewidth]{qMinAlg.pdf}
+	\caption{Total number of oracle evaluations required by quantum minimization algorithm \citep{durr1996quantum} for different starting ranks and search set sizes $N$ from 500 independent simulations each.  Here, less than 1\% of the 12,500 instances fail to recover the true minimum on account of early stopping.}\label{fig:qMinAlg}
+\end{figure}
 
 \section{Quantum parallel MCMC}
 
@@ -515,9 +526,6 @@ With the rudiments of quantum minimization in hand, we present our quantum paral
  \emph{Having successfully generated proposals $\ttheta_j,$ $j=1,\dots,P$ and evaluated the corresponding densities $q(\cdot,\cdot)$, we would like to use quantum parallelism and an oracle gate (say, $\U_\pi$) to efficiently compute the $\pi(\ttheta_j)$s but immediately encounter a Catch-22 when we seek to draw a sample $\ttheta^{(s+1)} \sim$ \emph{Discrete}$(\pi_0,\pi_1,\dots,\pi_P)$.  We can use neither a quantum nor a classical circuit to draw the sample! On the one hand, drawing the sample within a quantum circuit would somehow require that all superposed states have access to all the $\pi(\ttheta_j)$s at once to perform the required normalization.  On the other hand, drawing the sample within the classical circuit would require access to all the $\pi(\ttheta_j)$s, but measurement in the computational basis can only return one.}  
  
  In light of this dilemma, we propose to use the Gumbel-max trick to transform the generalized accept-reject step into a discrete optimization procedure.  From there, we use quantum minimization to efficiently sample from $\ppi$. Crucially, we get away with quantum parallel evaluation of the target $\pi(\cdot)$ over all superposed states because the Gumbel-max trick does not rely on a normalization step: each superposed state requires no knowledge of any target evaluation other than its own.  
- 
- 
-%qp$^2$MCMC uses quantum minimization to limit the number of target evaluations within the generalized acceptance step with the help of the Gumbel-max trick, which transforms the discrete sampling task $\ttheta^{(s+1)} \sim$ Discrete$(\pi_0,\pi_1,\dots,\pi_P)$ into a search problem over a discrete set of real numbers. 
 
 \subsection{Gumbel-max}\label{sec:gm}
 \newcommand{\p}{\mbox{p}}
